Name the tile creator on each tile. Prevent getting stuck on right click.

--- a/_attachments/styles/infinitemaze.css
+++ b/_attachments/styles/infinitemaze.css
@@ -163,7 +163,7 @@ body {
 .tile-box.get-here, .tile-box.draw-here {
 	cursor: auto;
 }
-.tile-box div {
+.tile-box .inner {
 	padding: 100px 0;
 }
 .tile-box.get-here {
@@ -179,6 +179,30 @@ body {
 .tile-box.drawing:hover {
 	opacity: .3;
 }
+
+.tile-info {
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 5px;
+	background-color: white;
+	font-size: 12px;
+	padding: 2px 3px;
+	opacity: 0.75;
+	border-radius: 4px;
+}
+.tile-info:hover {
+	opacity: 0.25;
+}
+
+.tile-box:not(.show-info) .tile-info-inner {
+	display: none;
+}
+
+.tile-info .name {
+	text-decoration: underline;
+}
+
 
 /* Editor toolbox */
 
